@startuml
class edu.escola.sistemaedu.model.Aluno.AlunoEntity {
- String login
- String senha
- List<ContratoEntity> contratoEntities
- EnderecoEntity enderecoEntity
- List<MatriculaEntity> matriculaEntities
+ String getLogin()
+ void setLogin(String)
+ String getSenha()
+ void setSenha(String)
+ List<ContratoEntity> getContratoEntities()
+ void setContratoEntities(List<ContratoEntity>)
+ EnderecoEntity getEnderecoEntity()
+ void setEnderecoEntity(EnderecoEntity)
+ List<MatriculaEntity> getMatriculaEntities()
+ void setMatriculaEntities(List<MatriculaEntity>)
}
class edu.escola.sistemaedu.model.Aluno.AlunoDto {
- Long pessoaID
- String nomeCompleto
- String CPF
- String RG
- Date dataNascimento
- String genero
- String email
- String telefoneCelular
- String telefoneFixo
- String cidadeNatal
- String estadoNatal
- boolean estrangeiro
- DadoAcademicoEntity dadosAcademicos
- DadoProfissionalEntity dadosProfissionais
- String login
- String senha
- List<ContratoEntity> contratoEntities
- EnderecoEntity enderecoEntity
- List<MatriculaEntity> matriculaEntities
}
interface edu.escola.sistemaedu.model.Aluno.AlunoRepository {
}


edu.escola.sistemaedu.model.Pessoa.Pessoa <|-- edu.escola.sistemaedu.model.Aluno.AlunoEntity
java.io.Serializable <|.. edu.escola.sistemaedu.model.Aluno.AlunoDto
org.springframework.data.jpa.repository.JpaRepository <|-- edu.escola.sistemaedu.model.Aluno.AlunoRepository
@enduml